# SPL191_3.2

./: CMakeLists.txt  makefile
include/: ReadFromServerTask.h  SendToServerTask.h
src/: Main.cpp  ReadFromServerTask.cpp  SendToServerTask.cpp  connectionHandler.cpp  echoClient.cpp
